--- a/Authentication/Solution/Solution.WebAPI/Solution.WebAPI.csproj
+++ b/Authentication/Solution/Solution.WebAPI/Solution.WebAPI.csproj
@@ -20,6 +20,8 @@
     </PackageReference>
     <PackageReference Include="Scalar.AspNetCore" Version="2.11.10" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="10.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="10.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.0" />
   </ItemGroup>
 
   <ItemGroup>
